update alacritty to work on mac and linux

--- a/config/alacritty.toml
+++ b/config/alacritty.toml
@@ -3,6 +3,9 @@ opacity = 0.94
 blur = true
 
 [font]
-size = 10.25
-normal = { family = "Source Code Pro Light", style = "Regular" }
+size = 14
+
+[font.normal]
+family = "Source Code Pro"
+#style = "Regular"
 
