--- a/config/aerospace/aerospace.toml
+++ b/config/aerospace/aerospace.toml
@@ -74,11 +74,8 @@ outer.right =      4
 # - Keypad special. keypadClear, keypadDecimalMark, keypadDivide, keypadEnter, keypadEqual,
 #                   keypadMinus, keypadMultiply, keypadPlus
 # - Arrows.         left, down, up, right
-
 # All possible modifiers: cmd, alt, ctrl, shift
-
 # All possible commands: https://nikitabobko.github.io/AeroSpace/commands
-
 # See: https://nikitabobko.github.io/AeroSpace/commands#exec-and-forget
 # You can uncomment the following lines to open up terminal with alt + enter shortcut (like in i3)
 # alt-enter = '''exec-and-forget osascript -e '
@@ -89,29 +86,31 @@ outer.right =      4
 # '''
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
-alt-slash = 'layout tiles horizontal vertical'
+alt-space = 'layout tiles horizontal vertical'
 alt-comma = 'layout accordion horizontal vertical'
+alt-period = 'layout floating'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
-alt-h = 'focus left'
+alt-h = 'focus --boundaries all-monitors-outer-frame left'
 alt-j = 'focus down'
 alt-k = 'focus up'
-alt-l = 'focus right'
+alt-l = 'focus --boundaries all-monitors-outer-frame right'
 
+ctrl-shift-h = ['join-with left', 'mode main']
+ctrl-shift-j = ['join-with down', 'mode main']
+ctrl-shift-k = ['join-with up', 'mode main']
+ctrl-shift-l = ['join-with right', 'mode main']
 
+# MODE SHORTCUT
 # See: https://nikitabobko.github.io/AeroSpace/commands#mode
-alt-shift-semicolon = 'mode service'
-alt-space = 'mode windows'
+alt-semicolon = 'mode service'
+alt-w = 'mode windows'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move
 alt-shift-h = 'move left'
 alt-shift-j = 'move down'
 alt-shift-k = 'move up'
 alt-shift-l = 'move right'
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#resize
-alt-shift-minus = 'resize smart -50'
-alt-shift-equal = 'resize smart +50'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
 alt-1 = 'workspace 1'
@@ -122,51 +121,20 @@ alt-5 = 'workspace 5'
 alt-6 = 'workspace 6'
 alt-7 = 'workspace 7'
 alt-8 = 'workspace 8'
-alt-b = 'workspace Browser'
-alt-c = 'workspace Clin'
-alt-d = 'workspace D'
-alt-f = 'workspace F'
-alt-g = 'workspace G'
-alt-m = 'workspace M'
-alt-n = 'workspace N'
-alt-p = 'workspace P'
-alt-q = 'workspace Q'
-alt-r = 'workspace R'
-alt-s = 'workspace S'
-alt-t = 'workspace Terminal'
-alt-v = 'workspace Video'
-alt-w = 'workspace WebDev'
-alt-x = 'workspace xcode'
-alt-y = 'workspace Y'
-alt-z = 'workspace Z'
+alt-9 = 'workspace 9'
+alt-0 = 'workspace 0'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-alt-shift-1 = 'move-node-to-workspace 1'
-alt-shift-2 = 'move-node-to-workspace 2'
-alt-shift-3 = 'move-node-to-workspace 3'
-alt-shift-4 = 'move-node-to-workspace 4'
-alt-shift-5 = 'move-node-to-workspace 5'
-alt-shift-6 = 'move-node-to-workspace 6'
-alt-shift-7 = 'move-node-to-workspace 7'
-alt-shift-8 = 'move-node-to-workspace 8'
-alt-shift-b = 'move-node-to-workspace Browser'
-alt-shift-c = 'move-node-to-workspace Clin'
-alt-shift-d = 'move-node-to-workspace D'
-alt-shift-f = 'move-node-to-workspace F'
-alt-shift-g = 'move-node-to-workspace G'
-alt-shift-i = 'move-node-to-workspace I'
-alt-shift-m = 'move-node-to-workspace M'
-alt-shift-n = 'move-node-to-workspace N'
-alt-shift-p = 'move-node-to-workspace P'
-alt-shift-q = 'move-node-to-workspace Q'
-alt-shift-r = 'move-node-to-workspace R'
-alt-shift-s = 'move-node-to-workspace S'
-alt-shift-t = 'move-node-to-workspace Terminal'
-alt-shift-v = 'move-node-to-workspace Video'
-alt-shift-w = 'move-node-to-workspace WebDev'
-alt-shift-x = 'move-node-to-workspace xcode'
-alt-shift-y = 'move-node-to-workspace Y'
-alt-shift-z = 'move-node-to-workspace Z'
+alt-shift-1 = ['move-node-to-workspace 1', 'workspace 1']
+alt-shift-2 = ['move-node-to-workspace 2', 'workspace 2']
+alt-shift-3 = ['move-node-to-workspace 3', 'workspace 3']
+alt-shift-4 = ['move-node-to-workspace 4', 'workspace 4']
+alt-shift-5 = ['move-node-to-workspace 5', 'workspace 5']
+alt-shift-6 = ['move-node-to-workspace 6', 'workspace 6']
+alt-shift-7 = ['move-node-to-workspace 7', 'workspace 7']
+alt-shift-8 = ['move-node-to-workspace 8', 'workspace 8']
+alt-shift-9 = ['move-node-to-workspace 9', 'workspace 9']
+alt-shift-0 = ['move-node-to-workspace 0', 'workspace 0']
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
 alt-tab = 'workspace-back-and-forth'
@@ -181,25 +149,32 @@ r = ['flatten-workspace-tree', 'mode main'] # reset layout
 f = ['layout floating tiling', 'mode main'] # Toggle between floating and tiling layout
 shift-q = ['close-all-windows-but-current', 'mode main']
 
-shift-h = ['join-with left', 'mode main']
-shift-j = ['join-with down', 'mode main']
-shift-k = ['join-with up', 'mode main']
-shift-l = ['join-with right', 'mode main']
-alt-shift-h = ['move-workspace-to-monitor --wrap-around prev', 'mode main']
-alt-shift-l = ['move-workspace-to-monitor --wrap-around next', 'mode main']
-
 [mode.windows.binding]      # 2. Declare 'windows' binding mode
 esc = 'mode main'
 minus = 'resize smart -50'
 equal = 'resize smart +50'
-alt-h = 'move left'
+alt-h = 'move-node-to-monitor left'
 alt-j = 'move down'
 alt-k = 'move up'
-alt-l = 'move right'
-alt-shift-h = ['move-workspace-to-monitor --wrap-around prev', 'mode main']
-alt-shift-l = ['move-workspace-to-monitor --wrap-around next', 'mode main']
+alt-l = 'move-node-to-monitor right'
+alt-shift-h = ['move-workspace-to-monitor left', 'mode main']
+alt-shift-l = ['move-workspace-to-monitor right', 'mode main']
+
 
 [workspace-to-monitor-force-assignment]
-Terminal = 'secondary'
-WebDev = 'primary'
-Video = 'primary'
+Terminal = '2'
+WebDev = '1'
+Video = '8'
+Browser = 'secondary'
+xcode = 'secondary'
+Clin = 'secondary'
+1 = 'primary'
+2 = 'primary'
+3 = 'primary'
+4 = 'primary'
+5 = 'primary'
+6 = 'primary'
+7 = 'secondary'
+8 = 'secondary'
+9 = 'secondary'
+0 = 'secondary'
