--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -8,7 +8,7 @@
 #theme = dark:UnderTheSea,light:"Builtin Tango Light"
 
 #theme = dark:UnderTheSea,light:"Material"
-theme = dark:UnderTheSea,light:"primary"
+theme = dark:Brogrammer,light:"Primary"
 
 # theme = Brogrammer
 # theme = BlueDolphin
@@ -19,9 +19,9 @@ theme = dark:UnderTheSea,light:"primary"
 # theme = "Belafonte Day"
 
 font-family = "MesloLGS Nerd Font Mono"
-font-size = 13
+font-size = 11
 background-opacity = 0.9
-background-blur-radius = 6 
+background-blur-radius = 16
 
 keybind = cmd+shift+space=toggle_quick_terminal
 
